# Livermore

./: .gitignore  README.md  TradingBOT.py  bot.py  pyproject.toml  requirements.txt
Trading/: metrics.py
archive/: README.md  bot.py  requirements.txt
examples/: analyze_options.py  check_btc.py  check_other.py  check_others.py  check_stock_split.py  compare_sectors.py  compute_ev.py  compute_history_ev.py  compute_rv.py  compute_value.py  debug_alphavantage.py  debug_candle_computation.py  debug_discord.py  debug_signal.py  download_etf_profile.py  history_evaluation_v0.py  option_prices.py  select_stocks.py  update_basic_info.py  update_candles.py  update_new_infos.py
finhub/: README.md  buy_signal_bot.py  call_reward_risk.py  discord_bot.py  engine.py  put_call_ratio.py  utils.py
finhub/pricing_models/: black_scholes.py  heston_volatility.py
livermore/: __init__.py  discord_engine.py  finnhub_engine.py  misc.py  signal_utils.py  stock_candle_database.py
livermore/archive/: discord_bot.py  ema.py  engine.py  finnhub_engine.py  finnhub_engine_back.py  finnhub_engine_old.py  trader.py  trend.py
livermore/data/: .gitignore  coarse_selection.json  company_basic_data.json  currencies_map_20250206.json  discord_channels.json  etf_by_sectors.json  existing_opportunities.json  important_ETF.json  large_companies_20250206.json  lingfeng_symbols.json  previous_signals.json  remapped_coarse_selection.json  selected_sotcks.json  stock_splits.json  usd_stock_symbols.json
livermore/data/ETF/: CQQQ.json  DPST.json  (+40 more)
livermore/modeling/: tmp.py  volatility_estimation.py
(+1 files in other folders)
